<resources>
    <string name="app_name">GDST Vietnam</string>
    <string name="Open">Mở</string>
    <string name="Close">Đóng</string>
    <string name="hello">Xin chào,</string>
    <string name="active">Hoạt động</string>
    <string name="pause">Tạm ngưng</string>
    <string name="cqcpkt">Cơ quan cấp phép khai thác</string>
    <string name="cqcptc">Cơ quan cấp phép trung chuyển</string>
    <string name="cngp">Chưa nhập giấy phép</string>
    <string name="vlncqcpkt">Vui lòng chọn cơ quan cấp phép khai thác</string>
    <string name="vlncqcptc">Vui lòng chọn ơ quan cấp phép trung chuyển</string>
    <string name="ccsplcnk">Có chính sách Phúc lợi con người không?</string>
    <string name="ctcplcnk">Có Tiêu chuẩn Phúc lợi con người không?</string>
    <string name="csgp">Chỉnh sửa giấy phép</string>
    <string name="tmgp">Thêm mới giấy phép</string>
    <string name="c">Có</string>
    <string name="k">Không</string>
    <string name="kpgdkqtv">Không phân dải được kết quả trả về</string>
    <string name="kldtdlcs">Không lấy được tập dữ liệu tàu có sẵn</string>
    <string name="fips" translatable="false">FIPs</string>
    <string name="gear_type">Ngư cụ</string>
    <string name="landing_locations">Vị trí lên cá</string>
    <string name="vlcttt">Vui lòng chọn thông tin tàu</string>
    <string name="vlcfip">Vui lòng chọn FIP</string>
    <string name="vlcnd">Vui lòng chọn ngày đi</string>
    <string name="vlcnc">Vui lòng chọn ngư cụ</string>
    <string name="vlcptkt">Vui lòng chọn phương thức khai thác</string>
    <string name="vlcvtlc">Vui lòng chọn vị trí lên cá</string>
    <string name="vlcnlc">Vui lòng chọn ngày lên cá</string>
    <string name="cttt">Chọn thông tin tàu</string>
    <string name="product_forms">Dạng sản phẩm</string>
    <string name="vlcngml">Vui lòng chọn ngày giờ mẻ lưới</string>
    <string name="vlcvtml">Vui lòng chọn vị trí mẻ lưới</string>
    <string name="vlnmml">Vui lòng nhập mã mẻ lưới</string>
    <string name="sdltnl">Sửa dữ liệu tàu nguyên liệu</string>
    <string name="dvt">Đơn vị tính</string>
    <string name="loai">Loài</string>
    <string name="dsp">Dạng sản phẩm</string>
    <string name="vlcl">Vui lòng chọn loài</string>
    <string name="vlcdvt">Vui lòng chọn đơn vị tính</string>
    <string name="vlcdsp">Vui lòng chọn dạng sản phẩm</string>
    <string name="vlnkdelk">Vui lòng nhập KDE liên kết</string>
    <string name="vlnsl">Vui lòng nhập sản lượng</string>
    <string name="stnl">Sửa dữ liệu tàu nguyên liệu</string>
    <string name="tdltnl">Tạo dữ liệu tàu nguyên liệu</string>
    <string name="dtdnntc">Đã thay đổi ngôn ngữ thành công, việc thay đổi sẽ được áp dụng sau khi khởi động lại ứng dụng hoặc chuyển màn hình</string>
    <string name="btsmdxkplv">Bạn thực sự muốn đăng xuất khỏi phiên làm việc?</string>
    <string name="ltqtpga">Lỗi trong quá trình phân giải ảnh</string>
    <string name="vlnhvt">Vui lòng nhập họ và tên</string>
    <string name="mkpdttkt">Mật khẩu phải đạt tối thiểu 8 ký tự</string>
    <string name="cntttktc">Cập nhật thông tin tài khoản thành công</string>
    <string name="cntttkctc">Cập nhật thông tin tài khoản chưa thành công</string>
    <string name="cnaddktc">Cập nhật ảnh đại diện không thành công (Error: 2)</string>
    <string name="ktxnctbtt">Không thể xác nhận công ty bạn trực thuộc</string>
    <string name="ktlhscb">Không thể lấy hồ sơ của bạn</string>
    <string name="cbcmntl">Chúc bạn có một ngày tốt lành</string>
    <string name="tlnlktc">Tạo lô nguyên liệu không thành công (Error: 1)</string>
    <string name="ktxdlhdc">Không thể xác định lô hàng được chọn</string>
    <string name="lnl">Lô nguyên liệu</string>
    <string name="tl">Tổng loài: </string>
    <string name="tlk">Tàu liên kết: </string>
    <string name="kl">Kh.Lượng: </string>
    <string name="tone">Tấn</string>
    <string name="ttnlktc">Tạo tàu nguyên liệu không thành công (Error: 1)</string>
    <string name="ktxddlnldc">Không thể xác định lô nguyên liệu được chọn</string>
    <string name="tnl">Tàu nguyên liệu</string>
    <string name="nd">Ngày đi: </string>
    <string name="nc">Ngư cụ: </string>
    <string name="ptkt">Phương thức khai thác: </string>
    <string name="ptkt_clear">Phương thức khai thác</string>
    <string name="lc">"Lên cá: "</string>
    <string name="dcdvcmqrdq">Di chuyển camera đến vùng chứa mã QR để quét</string>
    <string name="dlt">Dữ liệu tàu</string>
    <string name="sdkt">"Số đăng ký tàu: "</string>
    <string name="vms" translatable="false">VMS: </string>
    <string name="cgpkt">"Cấp phép kh.thác: "</string>
    <string name="gpkt">GP Kh.thác:</string>
    <string name="csplcn">"Chính sách phúc lợi con người: "</string>
    <string name="tcplcn">"Tiêu chuẩn phúc lợi con người: "</string>
    <string name="tlhktc">Tạo lô hàng không thành công (Error: 1)</string>
    <string name="tlhktc_2">Tạo lô hàng không thành công (Error: 2)</string>
    <string name="lh">Lô hàng</string>
    <string name="btsmdud">Bạn thực sự muốn đóng ứng dụng?</string>
    <string name="ttkhmkkd">Tên tài khoản hoặc mật khẩu không đúng</string>
    <string name="dnktcvltl">Đăng nhập không thành công, vui lòng thử lại</string>
    <string name="cnmk">Chưa nhập mật khẩu</string>
    <string name="ccttt">Chọn công ty trực thuộc</string>
    <string name="dktc">Đăng ký thành công</string>
    <string name="ttkdtt">Tên tài khoản đã tồn tại</string>
    <string name="dkktcvltl">Đăng ký không thành công, vui lòng thử lại</string>
    <string name="cnhvt">Chưa nhập họ và tên</string>
    <string name="cnttk">Chưa nhập tên tài khoản</string>
    <string name="cnttktktc">Cập nhật thông tin kỹ thuật không thành công (Error: 1)</string>
    <string name="tttktktc">Tạo thông tin kỹ thuật không thành công (Error: 1)</string>
    <string name="ktxdtnldc">Không thể xác định tàu nguyên liệu được chọn</string>
    <string name="ttkt">Thông tin kỹ thuật</string>
    <string name="empty"><![CDATA[<Rỗng>]]></string>
    <string name="kdelk">KDE Liên kết: </string>
    <string name="tsl">Tổng số loài: </string>
    <string name="tkl">Tổng khối lượng: </string>
    <string name="kg">KG</string>
    <string name="vtct">Vị trí chuyển tải: </string>
    <string name="sl">Sản lượng</string>
    <string name="kttlm">Không tìm thấy loài mã</string>
    <string name="dldltc">Đã lưu dữ liệu thành công</string>
    <string name="ktcnddl">Không thể cập nhật được dữ liệu</string>
    <string name="ktxdttktcmldc">Không thể xác định thông tin kỹ thuật của mẻ lưới được chọn</string>
    <string name="ttsl">Thông tin sản lượng</string>
    <string name="event_red_point">Vị trí mẻ lưới</string>
    <string name="transhipment_location">Vị trí trung chuyển</string>
    <string name="ngct">Ngày và giờ chuyển tải: </string>
    <string name="tc">Trang chủ</string>
    <string name="cn">Cá nhân</string>
    <string name="ttk">Tên Tài khoản</string>
    <string name="ctytt">Công ty trực thuộc</string>
    <string name="hvt">Họ và tên</string>
    <string name="mk">Mật khẩu</string>
    <string name="loggout">Đăng xuất</string>
    <string name="save">Lưu lại</string>
    <string name="cancel">Hủy</string>
    <string name="dtnkd">Để trống nếu không đổi</string>
    <string name="qmqr">Quét mã QR</string>
    <string name="lslh">Lịch sử lô hàng</string>
    <string name="dn">Đăng nhập</string>
    <string name="mkmd123456xxx">Mật khẩu (Mặc định: 123456)</string>
    <string name="qmk">Quên mật khẩu</string>
    <string name="cctk">Chưa có tài khoản?</string>
    <string name="dk">Đăng ký</string>
    <string name="dctk">Đã có tài khoản?</string>
    <string name="longtime_response">Ứng dụng dường như mất nhiều thời gian hơn dự tính để khởi động. Vui lòng thử lại hoặc báo cáo với nhà phát triển.</string>
    <string name="confirm">Xác nhận</string>
    <string name="plz_wait">Đang xử lý, vui lòng đợi trong giây lát...</string>
    <string name="tttx">Thông tin truy xuất</string>
    <string name="ttct">Thông tin chuyển tải</string>
    <string name="idml">ID Mẻ lưới (Dữ liệu tự động)</string>
    <string name="ngml">Ngày, giờ mẻ lưới</string>
    <string name="vtml">Vị trí mẻ lưới</string>
    <string name="kdelk_clear">KDE Liên kết</string>
    <string name="cct_adf">Có chuyển tải</string>
    <string name="ngct_adf">Ngày, giờ chuyển tải</string>
    <string name="vtct_adf">Vị trí chuyển tải</string>
    <string name="hoan_tat">Hoàn tất</string>
    <string name="ntkctk">Nhập từ khóa cần tìm kiếm...</string>
    <string name="toa_do">Tọa độ:</string>
    <string name="bctsmtlhms">Bạn thực sự muốn tạo lô hàng mới số</string>
    <string name="vao_luc">vào lúc</string>
    <string name="bcmtlnlms">Bạn thực sự muốn tạo lô nguyên liệu mới số</string>
    <string name="t_o_d_li_u_t_u_nguy_n_li_u_m_i">Tạo dữ liệu tàu nguyên liệu mới</string>
    <string name="ch_n_t_u_nguy_n_li_u">Chọn tàu nguyên liệu</string>
    <string name="d_n_fip">Dự án FIP</string>
    <string name="vtlc">Vị trí lên cá</string>
    <string name="ng_y_l_n_c">Ngày lên cá</string>
    <string name="cntnltc">Cập nhật tàu nguyên liệu thành công</string>
    <string name="bccmllntd">Bạn có thực sự muốn lưu lại những thay đổi</string>
    <string name="btsmxdllh">Bạn có chắc muốn xóa dữ liệu lô hàng</string>
    <string name="hk">hay không?</string>
    <string name="cnxhkdcp">Chức năng xóa hiện không được cho phép</string>
</resources>