<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/masterLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".ui.sign_in.SignInActivity">


    <include layout="@layout/component_header_wide_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/dn"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/asiTvErrorMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="Vui lòng nhập đầy đủ tên đăng nhập và mật khẩu"
            android:textAlignment="center"
            android:textColor="#ED213A"
            android:visibility="gone" />

        <EditText
            android:id="@+id/asiEdtUsername"
            style="@style/EditText.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="24dp"
            android:autofillHints="Mã số thuế"
            android:hint="@string/ttk"
            android:inputType="textEmailAddress|textAutoComplete"
            android:lines="1"
            android:maxLength="255" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="12dp"
            android:background="@android:color/transparent"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/asiEdtPassword"
                style="@style/EditText.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mkmd123456xxx"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="255" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSignIn"
            style="@style/Button.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/dn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/qmk"
            android:textColor="@color/text_link_blue"
            android:textSize="14sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cctk"
            android:textColor="#000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/dk"
            android:textColor="@color/text_link_blue"
            android:textSize="14sp" />
    </LinearLayout>

    <include layout="@layout/component_float_qr_scan_btn" />
</RelativeLayout>