<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="40dp">

    <ImageView
        android:id="@+id/aumvldIvClose"
        android:layout_width="@dimen/close_btn_size"
        android:layout_height="@dimen/close_btn_size"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/bg_btn_danger"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        android:src="@drawable/ic_close" />

    <ImageView
        android:id="@+id/acIvLogo"
        android:layout_width="160dp"
        android:layout_height="46dp"
        android:background="@drawable/bg_top_round_white"
        android:paddingHorizontal="4dp"
        android:paddingTop="10dp"
        android:paddingBottom="4dp"
        android:src="@drawable/gdst_banner" />

    <RelativeLayout
        android:id="@+id/confirmLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/acIvLogo"
        android:background="@drawable/bg_round_white_wo_top_left">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:alpha="0.2"
            android:background="#FFFFFFFF"
            android:scaleType="center"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="25dp">

            <TextView
                android:id="@+id/aumvldTvDialogName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/t_o_d_li_u_t_u_nguy_n_li_u_m_i"
                android:textColor="#000"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="8dp"
                android:background="#bdbdbd" />

            <TextView
                android:id="@+id/aumvldTvErrorMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="8dp"
                android:gravity="center"
                android:text="Vui lòng nhập đầy đủ tên đăng nhập và mật khẩu"
                android:textAlignment="center"
                android:textColor="#ED213A"
                android:visibility="gone" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:paddingVertical="1dp"
                        android:text="@string/ch_n_t_u_nguy_n_li_u"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <include
                        layout="@layout/item_layout_static_ship"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="25dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="-4dp"
                        android:paddingVertical="1dp"
                        android:text="@string/d_n_fip"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="@dimen/card_round_radius"
                        app:cardElevation="6dp"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:id="@+id/aumvldTvFIP"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:ellipsize="marquee"
                            android:gravity="center"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:padding="20dp"
                            android:singleLine="true"
                            android:text="-----------------"
                            android:textColor="#000"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="-4dp"
                        android:paddingVertical="1dp"
                        android:text="@string/nd"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="@dimen/card_round_radius"
                        app:cardElevation="6dp"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:id="@+id/aumvldTvTripDate"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:ellipsize="marquee"
                            android:gravity="center"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:padding="20dp"
                            android:singleLine="true"
                            android:text="-----------------"
                            android:textColor="#000"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="-4dp"
                        android:paddingVertical="1dp"
                        android:text="@string/gear_type"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="@dimen/card_round_radius"
                        app:cardElevation="6dp"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:id="@+id/aumvldTvGearType"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:ellipsize="marquee"
                            android:gravity="center"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:padding="20dp"
                            android:singleLine="true"
                            android:text="-----------------"
                            android:textColor="#000"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="-4dp"
                        android:paddingVertical="1dp"
                        android:text="@string/ptkt_clear"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="@dimen/card_round_radius"
                        app:cardElevation="6dp"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:id="@+id/aumvldTvProductionMethod"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:ellipsize="marquee"
                            android:gravity="center"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:padding="20dp"
                            android:singleLine="true"
                            android:text="-----------------"
                            android:textColor="#000"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="-4dp"
                        android:paddingVertical="1dp"
                        android:text="@string/vtlc"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="@dimen/card_round_radius"
                        app:cardElevation="6dp"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:id="@+id/aumvldTvLandingLocation"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:ellipsize="marquee"
                            android:gravity="center"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:padding="20dp"
                            android:singleLine="true"
                            android:text="-----------------"
                            android:textColor="#000"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="-4dp"
                        android:paddingVertical="1dp"
                        android:text="@string/ng_y_l_n_c"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="@dimen/card_round_radius"
                        app:cardElevation="6dp"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:id="@+id/aumvldTvDatesOfLanding"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:ellipsize="marquee"
                            android:gravity="center"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:padding="20dp"
                            android:singleLine="true"
                            android:text="-----------------"
                            android:textColor="#000"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>


                    <Button
                        android:id="@+id/aumvldBtnCreateMaterialShip"
                        style="@style/Button.Default"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="25dp"
                        android:layout_marginVertical="20dp"
                        android:text="@string/hoan_tat" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>